fix(Home): wrong #app width on tablets

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -16,4 +16,5 @@ html, body {
 
 #app {
   height: max-content;
+  width: max-content;
 }
